Cluster management code

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -286,16 +286,19 @@ export(failwith)
 export(filter)
 export(first)
 export(glimpse)
+export(get_cluster)
 export(group_by)
 export(group_size)
 export(grouped_df)
 export(grouped_dt)
 export(groups)
+export(has_cluster)
 export(has_lahman)
 export(hflights_postgres)
 export(hflights_sqlite)
 export(id)
 export(ident)
+export(init_cluster)
 export(inner_join)
 export(intersect)
 export(is.grouped_df)
@@ -338,6 +341,7 @@ export(sample_n)
 export(select)
 export(select_vars)
 export(semi_join)
+export(set_cluster)
 export(setdiff)
 export(setequal)
 export(show_sql)
@@ -358,6 +362,7 @@ export(src_postgres)
 export(src_sql)
 export(src_sqlite)
 export(src_tbls)
+export(stop_cluster)
 export(summarise)
 export(summarize)
 export(tally)
@@ -382,6 +387,9 @@ import(assertthat)
 importFrom(Rcpp,Rcpp.plugin.maker)
 importFrom(Rcpp,cppFunction)
 importFrom(methods,setRefClass)
+importFrom(parallel,detectCores)
+importFrom(parallel,makeForkCluster)
+importFrom(parallel,makePSOCKcluster)
 importFrom(utils,head)
 importFrom(utils,tail)
 useDynLib(dplyr)
