--- a/NAMESPACE
+++ b/NAMESPACE
@@ -390,6 +390,7 @@ importFrom(methods,setRefClass)
 importFrom(parallel,detectCores)
 importFrom(parallel,makeForkCluster)
 importFrom(parallel,makePSOCKcluster)
+importFrom(parallel,stopCluster)
 importFrom(utils,head)
 importFrom(utils,tail)
 useDynLib(dplyr)
