--- a/NAMESPACE
+++ b/NAMESPACE
@@ -285,8 +285,8 @@ export(explain_sql)
 export(failwith)
 export(filter)
 export(first)
-export(glimpse)
 export(get_cluster)
+export(glimpse)
 export(group_by)
 export(group_size)
 export(grouped_df)
@@ -381,6 +381,7 @@ export(type_sum)
 export(ungroup)
 export(union)
 export(with_order)
+exportClasses(MonetDBQuery)
 exportClasses(Progress)
 exportClasses(Query)
 import(assertthat)
